--- a/.github/workflows/post-to-facebook.yml
+++ b/.github/workflows/post-to-facebook.yml
@@ -1,16 +1,15 @@
-name: Post to Facebook Every 3 Hours
+name: Post to Facebook every 3 hours
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: "0 */3 * * *" # every 3 hours
-  workflow_dispatch: # allow manual runs from GitHub UI
+    - cron: "0 */3 * * *"
 
 jobs:
-  run-bot:
+  post:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Set up Node.js
@@ -21,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run poster.js
+      - name: Run poster script
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           PAGE_ACCESS_TOKEN: ${{ secrets.PAGE_ACCESS_TOKEN }}
